# FlightDataAccessor

./: .bzrignore  .gitignore  .mailmap  CHANGES  MANIFEST.in  README  README.rst  TODO  pip-requirements.txt  pyproject.toml  requirements-jenkins.txt  requirements-setup.txt  requirements.py  requirements.txt  setup.cfg  setup.py
doc/: Makefile  make.bat
doc/source/: Authors.rst  Overview.rst  conf.py  hdfaccess.rst  index.rst  modules.rst
flightdataaccessor/: __init__.py  file.py  parameter.py  utils.py
flightdataaccessor/datatypes/: array.py  downsample.py  dynamic.py  legacy.py  parameter.py
flightdataaccessor/formats/: \  base.py  compatibility.py  hdf.py  legacy.py
flightdataaccessor/tools/: gen_param_list.py  hdfvalidator.py
hdfaccess/: __init__.py  downsample.py  file.py  parameter.py  utils.py
hdfaccess/tests/: file_test.py  parameter_test.py  utils_test.py
hdfaccess/tools/: error_msg.txt  gen_param_list.py  hdfvalidator.py  parameter_lists.py  warn_msg.txt
jenkins/: test.sh
tests/: file_test.py  parameter_test.py  test_file.py  test_utils.py  utils_test.py
tests/datatypes/: array_test.py  downsample_test.py  parameter_test.py  test_array.py  test_downsample.py  test_dynamic.py  test_parameter.py
tests/formats/: \  base_test.py  hdf_test.py  legacy_test.py  test_base.py  test_hdf.py  test_legacy.py
tests/formats/data/: flight_data_v2.hdf5  flight_data_v3.hdf5
utils/: hdfvalidator.py
