[metadata]
name = FlightDataAccessor
version = 3.0.0b
author = Flight Data Services Ltd
author_email = developers@flightdataservices.com
maintainer = Flight Data Services Ltd
maintainer_email = developers@flightdataservices.com
url = http://www.flightdatacommunity.com/
description = An interface for HDF files containing flight data.
download_url = ''
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: OS Independent
    Topic :: Software Development
platforms = OS Independent
license = Open Software License (OSL-3.0)
keywords = hdf, numpy, flight, data

[aliases]
test = nosetests
build_html = build_sphinx -b html

[egg_info]
tag_build = .dev
tag_date = false
tag_svn_revision = false

# Other formats are 'bztar' and 'gztar' but 'zip' is a safe universal default.
[sdist]
formats = zip

[bdist]
formats = zip

[nosetests]
detailed-errors = true

[build]
force = 1

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[flake8]
ignore = T000, E501, E265, E266, E731, N802, D, Q, W503, W605
max-line-length = 119

[isort]
line_length = 119
multi_line_output = 5
include_trailing_comma = true
use_parentheses = true
