[metadata]
name = FlightDataAccessor
version = 3.0.0b
url = https://github.com/flightdataservices/flightdataaccessor
author = Flight Data Services Ltd
author_email = developers@flightdataservices.com
maintainer = Flight Data Services Ltd
maintainer_email = developers@flightdataservices.com
description = An interface for accessing Flight Data Files.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = data, flight, hdf, h5py, numpy
license = 'Other/Proprietary License'
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    License :: Other/Proprietary License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development

[options]
zip_safe = false
include_package_data = true
packages = find:
python_requires = >=3.7
test_suite = nose.collector
install_requires =
    blosc~=1.9.1
    deprecation~=2.1.0
    flightdatautilities
    h5py~=2.10.0
    numpy~=1.16.4
    pytz~=2019.1
    simplejson~=3.17.0
    sortedcontainers~=2.2.2

[options.extras_require]
dev =
    flake8>=3.7.7
    flake8-assertive>=1.0.1
    flake8-bugbear>=19.3.0
    flake8-coding>=1.3.2
    flake8-commas>=2.0.0
    flake8-comprehensions>=2.1.0
    flake8-docstrings>=1.3.0
    flake8-future-import>=0.4.5
    flake8-isort>=2.7.0
    flake8-logging-format>=0.6.0
    flake8-quotes>=2.0.1
    isort>=4.3.20

[sdist]
formats = zip

[bdist]
formats = zip

[aliases]
test = nosetests
build_html = build_sphinx -b html

[egg_info]
tag_build = .dev
tag_date = false
tag_svn_revision = false

[nosetests]
detailed-errors = true

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[flake8]
doctests = true
exclude = build,dist,.git,.tox,__pycache__
hang-closing = false
ignore = B001,B005,E121,E123,E126,E501,E731,FI1,FI9,W504
max-complexity = 20
max-doc-length = 119
max-line-length = 119
select = A5,B0,B3,B9,C,D2,D3,D4,E,F,G,I0,Q0,W
inline-quotes = single
multiline-quotes = single
docstring-quotes = double
no-accept-encodings = true

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = flightdataaccessor
known_internal = flightdatautilities
line_length = 119
multi_line_output = 5
sections=FUTURE,STDLIB,THIRDPARTY,INTERNAL,FIRSTPARTY,LOCALFOLDER
use_parentheses = true

[pycodestyle]
exclude = build,dist,.git,.tox,__pycache__
hang-closing = false
ignore = E121,E123,E126,E501,E731,W504
max-doc-length = 119
max-line-length = 119

[pydocstyle]
add-ignore = D1